fix megamenu spacing and scrolling

--- a/src/platform/site-wide/sass/merger.scss
+++ b/src/platform/site-wide/sass/merger.scss
@@ -466,6 +466,10 @@
     }
 
     #mega-menu {
+      margin-top: 1em;
+      #vetnav {
+        min-height: unset;
+      }
       .login-container {
         position: relative;
         top: -50px;
